<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stuff</string>
    <string name="action_settings">Settings</string>
    <string name="options_exit">Exit</string>
    <string name="enter_name_text_view">Enter your name</string>
    <string name="enter_button">Enter</string>
    <string name="calling_activity_message">The calling activity was </string>
    <string name="button_get_it">Go Get It</string>
    <string name="users_name_sent_back">The user\'s name was </string>
    <string name="get_the_name_text_view">Go Get the Name</string>
    <string name="title_activity_conversion">Conversion</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_to_conversion">To Conversion</string>
    <string name="convert_from_textview">Convert From</string>
    <string name="default_teaspoon_value">1.0 teaspoon</string>

</resources>
