<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="@dimen/second_layout_padding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/get_the_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_the_name_text_view"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onGetNameClick"
        android:text="@string/button_get_it" />

    <TextView
        android:id="@+id/users_name_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/users_name_sent_back"
        android:textSize="20dp"
        android:textStyle="bold" />


    <ListView
        android:id="@+id/theListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
